[package]
name = "bevy_dev"
version = "0.4.3"
authors = ["Vixen <infvix@gmail.com>", "undefinedbvhr"]
description = "Dev tools for Bevy Engine"
keywords = ["prototype", "devtools", "textures", "assets"]
categories = ["game-engines", "game-development"]
readme = "README.md"
repository = "https://github.com/Vixenka/bevy_dev"
license = "MIT"
edition = "2021"

[features]
default = ["ui"]
ui = ["dep:bevy_egui"]

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_render",
    "bevy_pbr",
    "png",
] }
random_color = "0.8.0"
rust-embed = "8.5.0"
uuid = "1.10.0"

bevy_egui = { version = "0.28", optional = true }

[dev-dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_winit",
    "tonemapping_luts",
] }
